--- a/.github/workflows/spotdl.yml
+++ b/.github/workflows/spotdl.yml
@@ -22,9 +22,13 @@ jobs:
     - name: Install dependencies
       run: |
         pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install spotdl yt-dlp
         sudo apt-get update
         sudo apt-get install -y ffmpeg
+
+    - name: Update yt-dlp
+      run: |
+        pip install --upgrade yt-dlp
 
     - name: Run Spotify Track Downloader
       run: |
