--- a/.github/workflows/spotdl.yml
+++ b/.github/workflows/spotdl.yml
@@ -26,10 +26,5 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y ffmpeg
 
-    - name: Update yt-dlp
-      run: |
-        pip install --upgrade yt-dlp
-
     - name: Run Spotify Track Downloader
-      run: |
-        python main.py
+      run: python main.py
