--- a/.github/workflows/spotdl.yml
+++ b/.github/workflows/spotdl.yml
@@ -11,20 +11,28 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    # Verificar el repositorio
     - name: Checkout repository
       uses: actions/checkout@v3
 
+    # Configurar Python
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.9'
 
+    # Instalar dependencias
     - name: Install dependencies
       run: |
         pip install --upgrade pip
-        pip install spotdl yt-dlp
+        pip install -r requirements.txt
         sudo apt-get update
         sudo apt-get install -y ffmpeg
 
+    # Actualizar yt-dlp (por si hay problemas con la versión actual)
+    - name: Update yt-dlp
+      run: pip install --upgrade yt-dlp
+
+    # Ejecutar el script
     - name: Run Spotify Track Downloader
       run: python main.py
