--- a/.github/workflows/spotdl.yml
+++ b/.github/workflows/spotdl.yml
@@ -1,32 +1,34 @@
-name: SpotDL Download Workflow
+name: SpotDL Automation
 
 on:
   workflow_dispatch:
-    inputs:
-      spotify_url:
-        description: "URL de Spotify del track"
-        required: true
-        default: "https://open.spotify.com/intl-es/track/7CkJfQByYyFdu9jRRXk858"
 
 jobs:
-  download-spotify-track:
+  download-song:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check out the code
-        uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.9
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.9'
 
-      - name: Install Dependencies
-        run: |
-          pip install --upgrade pip
-          pip install -r requirements.txt
-          sudo apt-get update && sudo apt-get install -y ffmpeg
+    - name: Install dependencies
+      run: |
+        pip install spotdl
+        apt-get install -y ffmpeg
 
-      - name: Download Track
-        run: |
-          python main.py "${{ github.event.inputs.spotify_url }}"
+    - name: Create output directory
+      run: mkdir -p downloads
+
+    - name: Run SpotDL script
+      run: python main.py "https://open.spotify.com/intl-es/track/7CkJfQByYyFdu9jRRXk858"
+
+    - name: Upload downloaded songs
+      uses: actions/upload-artifact@v3
+      with:
+        name: downloaded-songs
+        path: downloads/
