--- a/.github/workflows/spotdl.yml
+++ b/.github/workflows/spotdl.yml
@@ -18,8 +18,9 @@ jobs:
 
     - name: Install dependencies
       run: |
+        sudo apt-get update
+        sudo apt-get install -y ffmpeg
         pip install spotdl
-        apt-get install -y ffmpeg
 
     - name: Create output directory
       run: mkdir -p downloads
