--- a/.github/workflows/spotdl.yml
+++ b/.github/workflows/spotdl.yml
@@ -20,6 +20,7 @@ jobs:
         pip install -r requirements.txt
         sudo apt-get update
         sudo apt-get install -y ffmpeg
+        pip install -U yt-dlp  # Actualiza yt-dlp
 
     - name: Run script
       run: python main.py
